add Arrays